tests/suite/analyze/snapshots/suite__analyze__lazy_code_motion__used_on_one_branch_latest.snap
---
source: tests/suite/analyze/lazy_code_motion.rs
assertion_line: 54
expression: latest
---

                                       used_on_one_branch

+--------------------------------------------+     +--------------------------------------------+
|                fallthrough:                |     |                   enter:                   |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                         |
| (MOVE (TEMP _a) (ADD (TEMP _b) (CONST 1))) |     | (MOVE (TEMP _b) (CONST 0))                 |
| {}                                         |     | {}                                         |
| (JUMP merge)                               |     | (CJUMP (EQ (CONST 0) (CONST 0)) branch)    |
| {}                                         | <-- | {}                                         |
+--------------------------------------------+     +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                  branch:                   |
  |                                                | {}                                         |
  |                                                | (MOVE (TEMP _a) (CONST 0))                 |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (JUMP merge)                               |
  |                                                | {}                                         |
  |                                                +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                   merge:                   |
  |                                                | {}                                         |
  |                                                | (MOVE (TEMP _c) (ADD (TEMP _b) (CONST 1))) |
  |                                                | {}                                         |
  |                                                | (JUMP exit)                                |
  +----------------------------------------------> | {}                                         |
                                                   +--------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +--------------------------------------------+
                                                   |                   exit:                    |
                                                   | {}                                         |
                                                   +--------------------------------------------+

