tests/suite/analyze/snapshots/suite__analyze__lazy_code_motion__used_on_one_branch_used.snap
---
source: tests/suite/analyze/lazy_code_motion.rs
assertion_line: 54
expression: used
---

                                       used_on_one_branch

+--------------------------------------------+     +--------------------------------------------+
|                fallthrough:                |     |                   enter:                   |
| {}                                         |     | {}                                         |
| (MOVE (TEMP _a) (ADD (TEMP _b) (CONST 1))) |     | (MOVE (TEMP _b) (CONST 0))                 |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                         |
| (JUMP merge)                               |     | (CJUMP (EQ (CONST 0) (CONST 0)) branch)    |
| {(ADD (TEMP _b) (CONST 1))}                | <-- | {}                                         |
+--------------------------------------------+     +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                  branch:                   |
  |                                                | {}                                         |
  |                                                | (MOVE (TEMP _a) (CONST 0))                 |
  |                                                | {}                                         |
  |                                                | (JUMP merge)                               |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                   merge:                   |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (MOVE (TEMP _c) (ADD (TEMP _b) (CONST 1))) |
  |                                                | {}                                         |
  |                                                | (JUMP exit)                                |
  +----------------------------------------------> | {}                                         |
                                                   +--------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +--------------------------------------------+
                                                   |                   exit:                    |
                                                   | {}                                         |
                                                   +--------------------------------------------+

